# pitv

./: .env.sample  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.pi.yml  docker-compose.yml  install.sh  nginx.conf  setup-pitv.service
.github/actions/docker-build-push/: action.yml
.github/workflows/: build-image.yml  build.yml  docker-build.yml  frontend-deploy.yml
api/: .dockerignore  Dockerfile  pyproject.toml  run.py  run.sh
api/api/: app.py  omxplayer.py  player.py  settings.py  util.py  utils.py
api/static/: alpine.min.js  index.html
backend/: Dockerfile  nginx.conf  pyproject.toml  run.sh
backend/api/: app.py  player.py  remote.py  settings.py  util.py  videos.py
frontend/: .eleventy.js  package-lock.json  package.json  tailwind.config.js
frontend/src/: index.11tydata.js  index.njk  script.js  styles.css
frontend/src/_includes/: alert.njk  app.njk  connect.njk  footer.njk  notify.njk  playback_status.njk  player.njk  playlist.njk  playlist_editor.njk  power_on_warning.njk  status_bar.njk
lirc/: Dockerfile  argon.lircd.conf
misc/: config.txt  encode_video_on_pi4.sh
nginx/: Dockerfile
nginx/image/etc/nginx/templates/: api.conf.template
overlay/: Dockerfile  pyproject.toml  run.sh
overlay/overlay/: __main__.py  app.py
overlay/overlay/threads/: static.py  ui.py
pi/: docker-compose.dev.yml  docker-compose.yml
pi/api/: Dockerfile
pi/api/app/: api.py  pyproject.toml
pi/nginx/image/etc/nginx/templates/: api.conf.template
player/: Dockerfile  pyproject.toml
