[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
dbus-next = "^0.2.3"
python = "^3.10"
starlette = "^0.20.4"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
watchfiles = "^0.15.0"
yt-dlp = "^2022.6.29"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
