[tool.poetry]
name = "pitv"
version = "0.1.0"
description = "Raspberry Pi TV"
authors = ["David Cooper <david@dtcooper.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
pynput = "^1.7.6"
pyudev = "^0.24.1"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
ipython = "^8.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
